--- a/src/App.css
+++ b/src/App.css
@@ -164,6 +164,10 @@ body {
     align-items: center;
 }
 
+.checboxContainer label {
+    width: 100%;
+}
+
 .checboxContainer input {
     margin-left: 0;
 }
